# Synthetic_CoT_NiaH_Count

./: .gitignore  README.md  plan.md  pyproject.toml  requirements.txt
notebooks/: Trace_Count_v0_Colab.ipynb  Trace_Count_v10_Colab.ipynb  Trace_Count_v11_Colab.ipynb  Trace_Count_v12_Colab.ipynb  Trace_Count_v13_Colab.ipynb  Trace_Count_v14_Colab.ipynb  Trace_Count_v15_Colab.ipynb  Trace_Count_v16_2_Colab.ipynb  Trace_Count_v16_Colab.ipynb  Trace_Count_v17_Colab.ipynb  Trace_Count_v1_Colab.ipynb  Trace_Count_v2_2_Colab.ipynb  Trace_Count_v2_Colab.ipynb  Trace_Count_v3_2_Colab.ipynb  Trace_Count_v3_Colab.ipynb  Trace_Count_v4_Colab.ipynb  Trace_Count_v5_2_Colab.ipynb  Trace_Count_v5_4_Count_State_Causal_Colab.ipynb  Trace_Count_v5_Colab.ipynb  Trace_Count_v7_Colab.ipynb  Trace_Count_v8_Colab.ipynb  Trace_Count_v9_Colab.ipynb  pipeline_v3_codex_prompt.md  pipeline_v4_steering_codex_prompt.md  pipeline_v5_mixed_thinking_toggle_codex_prompt.md
scripts/: analyze_v16_2_checkpoint_dynamics.py  build_extension_notebooks.py  build_v10_notebook.py  build_v10_stratified_report.py  build_v11_v14_notebooks.py  build_v15_v17_notebooks.py  build_v16_2_notebook.py  build_v1_chinese_report.py  build_v2_2_attention_report.py  build_v2_2_notebook.py  build_v2_notebook.py  build_v3_2_causal_report.py  build_v3_2_notebook.py  build_v3_notebook.py  build_v4_report.py  build_v5_4_notebook.py  build_v5_explicit_switch_report.py  build_v5_report.py  build_v6_report.py  build_v9_notebook.py  fetch_tiny_shakespeare.py  monitor_runs.py  run_loss_mask_sweep.py  run_v10_geometry_path_steering.py  run_v10_head_state_bidirectional.py  run_v10_hidden_state_patching.py  run_v10_report_followups.py  run_v10_stratified_refresh.py  run_v10_successor_conversion.py  run_v10_successor_mlp_features.py  run_v10_successor_patching.py  run_v1_niah_like.py  run_v2_repeat_count.py
synthetic_counting_extensions/: __init__.py  v2_2_followup.py  v5_2_switch_diagnostics.py  v7_v8_sweeps.py
synthetic_niah_v3/: eval.py  run_v3.py
synthetic_niah_v4/: model.py
synthetic_niah_v5/: model.py
tests/: test_eval_parser.py  test_generator.py  test_loss_masks.py  test_synthetic_niah_v5.py  (+8 more)
(+69 files in other folders)
