[project]
name = "trace-counting"
version = "0.1.0"
description = "Synthetic trace-enumeration counting experiments with loss-mask ablations, probes, and plots."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.30",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "seaborn>=0.13",
    "torch>=2.2",
    "tqdm>=4.66",
    "transformers>=4.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trace_counting"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "colab_results",
    "data",
    "runs",
]
